# rl-snake

./: .gitignore  README.md  REAME.md  Snake_RL_Tutorial.ipynb  blog.md  compare_models.py  merge_snakezero_results.py  model.pth  pyproject.toml  requirements.txt  rl-snake.ipynb  setup.py  snake_learning_journey.html  tabular_double_q_5x5.pkl  tabular_q_5x5.pkl  train_curriculum_10x10.py  train_dqn.py  train_ppo.py  train_ppo_curriculum.py  train_reinforce.py  train_snakezero.py  train_tabular_q.py  visualize_journey.py
assets/: coverage_bars.json  learning_curves.json  snake_10x10_replay.html  snake_learning_journey.html  snakezero_games.json
docs/: blog.md  blog_post_1.md
envs/: snake_game.py
hf_space/: Dockerfile  README.md  app.py  requirements.txt
notebooks/: .gitignore  curiosity.py  pyproject.toml
notebooks/__marimo__/session/: curiosity.py.json
scripts/: merge_snakezero_results.py  parse_pilot_logs.py  run_eta_sweep.sh  run_pilot_ablation.sh  run_sparsity_ablation.sh  train_a2c.py  train_dqn.py  train_ppo.py  train_ppo_from_dqn.py  train_ppo_with_demos.py  train_snakezero.py  train_tabular_q.py
utils/: compare_ego.py  compare_models.py  icm.py  merge_snakezero_results.py  per.py  sum_tree.py  visualize_journey.py
