[project]
name = "rl-snake"
version = "0.1.0"
description = "Snake RL project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "torch",
    "matplotlib",
]

[tool.setuptools]
py-modules = ["snake_game", "train_tabular_q", "train_ppo_curriculum", "visualize_journey"]
